Specification of generic websocket api.
