# models/src/main/kotlin/fi/vauhtijuoksu/vauhtijuoksuapi/models/WebsocketTemplate.kt
@@ -1,0 +1,8 @@
+package fi.vauhtijuoksu.vauhtijuoksuapi.models
+
+import java.util.UUID
+
+data class WebsocketTemplate(
+        override val id: UUID,
+        val message: String,
+): Model
